base/src/test/resources/failure/holes/ctor-condition.aya.txt
In file $FILE:12:13 ->

  10 | 
  11 | def abs (a : Int) : Nat
  12 |   | pos a => {??}
                    ^--^

Goal: Goal of type
        Nat
        (Normalized: Nat)
      Context:
        {a : Nat}
        {a : Int} (not in scope)
      To ensure confluence:
        Given (a ⇒ zero), we should have: zero

In file $FILE:12:13 ->

  10 | 
  11 | def abs (a : Int) : Nat
  12 |   | pos a => {??}
                    ^--^

Error: Unsolved meta _
       in `_`

1 error(s), 0 warning(s).
What are you doing?
